--- a/dbc_overflow/Gemfile
+++ b/dbc_overflow/Gemfile
@@ -37,8 +37,10 @@ group :development, :test do
   gem 'byebug'
   gem 'rspec-rails', '~> 3.0'
   gem 'capybara'
+  gem 'selenium-webdriver'
   gem 'shoulda-matchers', require: false
   gem 'factory_girl_rails'
+  gem 'database_cleaner'
 
   # Access an IRB console on exception pages or by using <%= console %> in views
   gem 'web-console', '~> 2.0'
