--- a/dbc_overflow/Gemfile
+++ b/dbc_overflow/Gemfile
@@ -1,6 +1,7 @@
 source 'https://rubygems.org'
 
-
+gem 'dotenv-rails', :require => 'dotenv/rails-now'
+gem 'httparty'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.0'
 # Use postgresql as the database for Active Record
@@ -41,6 +42,8 @@ group :development, :test do
   gem 'shoulda-matchers', require: false
   gem 'factory_girl_rails'
   gem 'database_cleaner'
+
+
 
   # Access an IRB console on exception pages or by using <%= console %> in views
   gem 'web-console', '~> 2.0'
